Adding spell description and variable parsing code